plugins {
    id "com.modrinth.minotaur" version "2.+" apply false
    id 'dev.architectury.loom' version '1.13-SNAPSHOT' apply false
    id 'architectury-plugin' version '3.4-SNAPSHOT'
    id 'com.gradleup.shadow' version '8.3.6' apply false
}

architectury {
    minecraft = project.minecraft_version
}

allprojects {
    group = rootProject.maven_group
    version = rootProject.mod_version
}

project.ext.publish_changelog = {
    if (project.file('Changelog.md').exists()) {
        println('Found Changelog.md')
        return project.file('Changelog.md').text
    } else {
        println('Changelog.md not found, skipping changelog upload')
        return ''
    }
}()

ext.getPublishVersionType = {
    if (project.mod_version.contains("alpha")) {
        return 'alpha'
    } else if (project.mod_version.contains("rc") || project.mod_version.contains("beta")) {
        return 'beta'
    } else {
        return 'release'
    }
}

subprojects {
    apply plugin: 'dev.architectury.loom'
    apply plugin: 'architectury-plugin'
    apply plugin: 'maven-publish'

    base {
        // Set up a suffixed format for the mod jar names, e.g. `example-fabric`.
        archivesName = "$rootProject.archives_name-$project.name"
    }

    repositories {
        mavenLocal()
        maven {
            url = "https://api.modrinth.com/maven"
        }
    }

    dependencies {
        compileOnly 'org.jetbrains:annotations:26.0.2'
        implementation "io.github.jaffe2718:whisper-jni:$rootProject.whisper_jni_version"   // install it to mavenLocal() before build
        minecraft "net.minecraft:minecraft:$rootProject.minecraft_version"
        // mappings loom.officialMojangMappings()

        mappings "net.fabricmc:yarn:$rootProject.yarn_mappings:v2"
    }

    java {
        // Loom will automatically attach sourcesJar to a RemapSourcesJar task and to the "build" task
        // if it is present.
        // If you remove this line, sources will not be generated.
        withSourcesJar()

        sourceCompatibility = JavaVersion.VERSION_17
        targetCompatibility = JavaVersion.VERSION_17
    }

    tasks.withType(JavaCompile).configureEach {
        it.options.release = 17
    }
}
